{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 7,
  "lineage": "c4deefe2-997c-7f93-8ad7-b27892b11def",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-d5c43fe023d6476bb525b15ba56dabc365be4122ac1f0003",
            "domain": "vpc",
            "id": "eipalloc-d5c43fe023d6476bb525b15ba56dabc3",
            "instance": "i-8cf7a293ad4c460f8fc6263582f3c85e",
            "network_interface": "eni-65be4122a8bd4b638115f2788e92d631",
            "private_dns": "ip-172-31-0-3.ec2.internal",
            "private_ip": "172.31.0.3",
            "public_dns": "ec2-10-42-39-73.compute-1.amazonaws.com",
            "public_ip": "10.42.39.73",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-364f2a69d29c4792b6fc4502cb69fe0e4be44e8eac1f001c",
            "domain": "vpc",
            "id": "eipalloc-364f2a69d29c4792b6fc4502cb69fe0e",
            "instance": "i-eeeba5564b0c461daff5aa0b0b77edab",
            "network_interface": "eni-4be44e8e979446fba7f71d4335df6348",
            "private_dns": "ip-172-31-0-28.ec2.internal",
            "private_ip": "172.31.0.28",
            "public_dns": "ec2-10-42-39-11.compute-1.amazonaws.com",
            "public_ip": "10.42.39.11",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.server2",
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-aebcc1b5aa4d42c2bd7d40548bcc295b",
            "arn": "arn:aws:ec2:us-east-1::instance/i-8cf7a293ad4c460f8fc6263582f3c85e",
            "associate_public_ip_address": false,
            "availability_zone": "symphony",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-8cf7a293ad4c460f8fc6263582f3c85e",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "08nov",
            "monitoring": false,
            "primary_network_interface_id": "eni-65be4122a8bd4b638115f2788e92d631",
            "private_dns": "host-172-31-0-3.symphony.local",
            "private_ip": "172.31.0.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/vda",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "Name": "server-1-dvpc-1"
                },
                "throughput": 0,
                "volume_id": "vol-01c9095f304347f28843375cb5deabf9",
                "volume_size": 3,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "allow_all_aug25"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-75a343f9fb234c8785c21f853744b94c",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "server-1-dvpc-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-b29f140549d44ea58c3bc2b2d78d91bd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-aebcc1b5aa4d42c2bd7d40548bcc295b",
            "arn": "arn:aws:ec2:us-east-1::instance/i-eeeba5564b0c461daff5aa0b0b77edab",
            "associate_public_ip_address": false,
            "availability_zone": "symphony",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-eeeba5564b0c461daff5aa0b0b77edab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "08nov",
            "monitoring": false,
            "primary_network_interface_id": "eni-4be44e8e979446fba7f71d4335df6348",
            "private_dns": "host-172-31-0-28.symphony.local",
            "private_ip": "172.31.0.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/vda",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "Name": "server-2-dpvc-2"
                },
                "throughput": 0,
                "volume_id": "vol-791d82b26f484988b424d1667ca1af80",
                "volume_size": 3,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "allow_all_aug25"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-75a343f9fb234c8785c21f853744b94c",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "server-2-dpvc-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-b29f140549d44ea58c3bc2b2d78d91bd"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:dd69a0e1000e4f038645417ff39433a3:security-group/sg-b29f140549d44ea58c3bc2b2d78d91bd",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-b29f140549d44ea58c3bc2b2d78d91bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_aug25",
            "name_prefix": "",
            "owner_id": "dd69a0e1000e4f038645417ff39433a3",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-98d2b6561bfc46fc9135d4773644e30d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:dd69a0e1000e4f038645417ff39433a3:security-group/sg-79946dbd39cb410cab4fbfe9ec65e5a8",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-79946dbd39cb410cab4fbfe9ec65e5a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_sep1",
            "name_prefix": "",
            "owner_id": "dd69a0e1000e4f038645417ff39433a3",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-98d2b6561bfc46fc9135d4773644e30d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}